# ConcurrentesI2018C1Conculandia

./: CMakeLists.txt  README.md  main.cpp  personas.csv  personasriesgo.txt
ContadorPersonas/: CMakeLists.txt  ContadorPersonas.cpp  ContadorPersonas.h
Fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h
FilaEspera/: CMakeLists.txt  FilaEspera.cpp  FilaEspera.h
Lock/: CMakeLists.txt  LockFile.cpp  LockFile.h  LockReadFile.cpp  LockReadFile.h
Logger/: Logger.cpp  Logger.h
MemoriaCompartida/: CMakeLists.txt
Menu/: CMakeLists.txt  Menu.cpp  Menu.h
MinistroSeguridad/: CMakeLists.txt  MinistroSeguridad.cpp  MinistroSeguridad.h
Persona/: Persona.cpp  Persona.h
Pipes/: Pipe.cpp  Pipe.h
PortaSellos/: CMakeLists.txt  PortaSellos.cpp  PortaSellos.h
Printer/: CMakeLists.txt  Printer.cpp  Printer.h
ProcesoHijo/: ProcesoHijo.cpp  ProcesoHijo.h
Sello/: CMakeLists.txt  Sello.cpp  Sello.h
Semaforo/: CMakeLists.txt
Status/: Status.cpp  Status.h
Util/: Util.cpp  Util.h
Ventanilla/: CMakeLists.txt  Ventanilla.cpp  Ventanilla.h
